--- a/Site_Honkai/locais/expresso_astral.html
+++ b/Site_Honkai/locais/expresso_astral.html
@@ -1,9 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-<title>Expresso Astral</title>
-<link rel="stylesheet" type="text/css" href="locais.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="expresso.css">
+    <title>Expresso Astral</title>
 </head>
 <body>
-</body>
-</html>
+    <section id="explicacao">
+<div class="container">
+        <ul>
+            O Astral Express é um grande trem que serve como um dos cenários principais de Honkai: Star Rail . Foi criado pelo Aeon Akivili the Trailblaze e pode ser usado para viajar pela galáxia usando o trilho estelar. Depois que caiu em desuso e foi consertado por Himeko , o objetivo do Astral Express Crew foi consertar o trilho estelar selando os Stellarons e navegando pela galáxia.
+        </ul>
+    </section>
+        <div class="history">
+        <h2>Visão geral</h2>
+    </div>
+    <p>
+        O Astral Express foi criado por Akivili , o Aeon do Trailblazer, e as lendas afirmam que o coração de Akivili alimenta o núcleo do Astral Express - embora Himeko não tenha encontrado nenhuma evidência para apoiar essa afirmação enquanto consertava o trem.
+
+No passado, o Expresso Astral foi concedido pela primeira vez por Akivili. Logo após a queda do Aeon, o Nameless assumiu o legado pioneiro de Akivili. Quando o Stellaron começou a se espalhar, o trilho estelar também foi vítima de sua influência a ponto de o trem mal funcionar. Como resultado, a facção Nameless decidiu abandoná-lo depois que os trilhos foram obstruídos por muito tempo.
+
+O Astral Express foi descoberto mais tarde por Himeko durante sua infância, durante a qual ela ficou fascinada com as histórias do motor. Ela consertaria o trem anos depois para começar sua jornada pelo universo.
+    </p>
+    <div class="history">
+        <h2>Descrição</h2>
+    </div>
+    <p>
+        Após a queda de Akivili, o Aeon do Trailblaze , sua vontade pioneira foi herdada por seus seguidores chamados de Nameless, incluindo o Astral Express que o Aeon uma vez montou. No entanto, à medida que o Câncer de Todos os Mundos continua a se espalhar, o trilho estelar no qual o expresso corre também foi vítima. O expresso mal conseguia correr com a expansão da praga e não teve escolha a não ser parar quando os trilhos ficaram excessivamente obstruídos. Permaneceu assim por muitos anos até Himekodescobriu sua existência. Ela ficou fascinada com as histórias que o motor e os trilhos estelares guardavam. Ela passou inúmeras horas consertando as rachaduras e nivelando os amassados, restaurando o expresso à sua forma original. A garota curiosa então pisou no Expresso e começou sua viagem pioneira pela galáxia.
+
+        O Expresso Astral fazia paradas em todas as estações, pegando passageiros apressados ​​ao longo do caminho. Muitos continuam entrando e saindo das viagens do Expresso. Todos os viajantes vêm de mundos diferentes, carregando fardos diferentes e indo para um destino diferente. Mas uma vez que estão todos no Astral Express, todos compartilham a mesma experiência de viagem. E é por isso que Himeko e o Expresso não hesitam em abrir as portas do Expresso Astral a quem quiser partilhar esta experiência, mesmo que isso signifique que têm no coração agendas diferentes, mesmo que algumas sejam mal intencionadas.
+    </p>
+          <div class="description">
+                                    <ul>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#sobre" style="color: #ad861b;">Sobre</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#obtencao"style="color: #ad861b;">Obtenção</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#progressao"style="color: #ad861b;">Progressão</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
+                                        </li>
+                                        <li>
+                                            <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
+                                        </li>
+                                    </ul>
+                                </div>
+        </div>
+    </body>
+    </html>
