--- a/Site_Honkai/site.html
+++ b/Site_Honkai/site.html
@@ -556,7 +556,7 @@
                                 </td>
                                 <td><a href="/Site_Honkai/personagens/cocolia.html" title="Cocolia Rand"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Cocolia Rand</font></font></a>
                                 </td>
-                                <td><a href="/Site_Honkai/locais/expresso_astral.html" title="Belobog"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Belobog</font></font></a>
+                                <td><a href="/Site_Honkai/locais/belobog.html" title="Belobog"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Belobog</font></font></a>
                                 </td>
                                 <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">	Antagonista em In the Withering Winter Night e In the Sweltering Morning Sun,
                                     Ex- guardiã suprema de Belobog e mãe adotiva de Bronya Rand
@@ -567,7 +567,7 @@
                                 </td>
                                 <td><a href="/Site_Honkai/personagens/dan_shu.html" title="Dan Shu"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Dan Shu</font></font></a>
                                 </td>
-                                <td><a href="" title="Xianzhou Luofu"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">O Xianzhou Luofu</font></font></a>
+                                <td><a href="/Site_Honkai/locais/xianzhou.html" title="Xianzhou Luofu"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">O Xianzhou Luofu</font></font></a>
                                 </td>
                                 <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Antagonista em Windswept Wanderlust e
                                     Líder dos Discípulos de Sanctus Medicus
@@ -577,7 +577,7 @@
                                     </td>
                                     <td><a href="/Site_Honkai/personagens/oleg.html" title="Oleg"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oleg</font></font></a>
                                     </td>
-                                    <td><a href="" title="Belobog"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Belobog</font></font></a>
+                                    <td><a href="/Site_Honkai/locais/belobog.html" title="Belobog"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Belobog</font></font></a>
                                     </td>
                                     <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Personagem coadjuvante em In the Withering Winter Night e In the Sweltering Morning Sun e
                                         Captain of Wildfire
@@ -620,7 +620,7 @@
     </section>
 </main>
 <footer>
-    <p> 2023. Todos os direitos reservados.</p>
+    <p>&copy; 2023. Todos os direitos reservados.</p>
 </footer>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
