--- a/Site_Honkai/personagens/luocha.html
+++ b/Site_Honkai/personagens/luocha.html
@@ -58,7 +58,8 @@
         </tr>
         </tr>
         <th>Adicionado pela primeira vez</th>
-        <td></td>
+        <td>Version 0.70
+        </td>
         </tr>
     </table>
  <table class="character-table">
