--- a/Site_Honkai/personagens/silverwolf.html
+++ b/Site_Honkai/personagens/silverwolf.html
@@ -60,176 +60,175 @@
         <td>Versão 0.70</td>
         </tr>
     </table>
-        <div>
-    <h2><span class="mw-headline" id="Ascensions_and_Stats"><font style="vertical-align: inherit;">
-    <font style="vertical-align: inherit;">Ascensões e estatísticas</font></font></span></h2> 
-    <table>
-        <thead>
-        <tr>
-            <th>Fase de Ascensão</th>
-            <th>Level</th>
-            <th>Base HP</th>
-            <th>Base ATK</th>
-            <th>Base DEF</th>
-            <th>Base SPD</th>
-        </tr>
-        </thead>
-        <tbody>
-          <tr class="alternating1">
-            <td rowspan="2">0✦</td>
-            <td class="level-container">1/20</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating1">
-            <td class="level-container">20/20</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating2">
-            <td rowspan="2">1✦</td>
-            <td class="level-container">20/30</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating2">
-            <td class="level-container">30/30</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating1">
-            <td rowspan="2">2✦</td>
-            <td class="level-container">30/40</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating1">
-            <td class="level-container">40/40</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating2">
-            <td rowspan="2">3✦</td>
-            <td class="level-container">40/50</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating2">
-            <td class="level-container">50/50</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating1">
-            <td rowspan="2">4✦</td>
-            <td class="level-container">50/60</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating1">
-            <td class="level-container">60/60</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating2">
-            <td rowspan="2">5✦</td>
-            <td class="level-container">60/70</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating2">
-            <td class="level-container">70/70</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating1">
-            <td rowspan="2">6✦</td>
-            <td class="level-container">70/80</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-          <tr class="alternating1">
-            <td class="level-container">80/80</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-            <td>???</td>
-          </tr>
-        </tbody>
-    </table>
-    <table>
-        <thead>
-          <tr>
-            <th>Nível</th>
-            <th>Custo de Evolução</th>
-            <th>Materiais de Ascensão do Personagem</th>
-            <th>Materiais Necessários</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>0 → 1 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
-            <td></td>
-            <td>5</td>
-          </tr>
-          <tr>
-            <td>1 → 2 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+        <h2><span class="mw-headline" id="Ascensions_and_Stats"><font style="vertical-align: inherit;">
+        <font style="vertical-align: inherit;">Ascensões e estatísticas</font></font></span></h2> 
+        <table>
+            <thead>
+            <tr>
+                <th>Fase de Ascensão</th>
+                <th>Level</th>
+                <th>Base HP</th>
+                <th>Base ATK</th>
+                <th>Base DEF</th>
+                <th>Base SPD</th>
+            </tr>
+            </thead>
+            <tbody>
+              <tr class="alternating1">
+                <td rowspan="2">0✦</td>
+                <td class="level-container">1/20</td>
+                <td>142</td>
+                <td>81</td>
+                <td>62</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating1">
+                <td class="level-container">20/20</td>
+                <td>277</td>
+                <td>159</td>
+                <td>122</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating2">
+                <td rowspan="2">1✦</td>
+                <td class="level-container">20/30</td>
+                <td>335</td>
+                <td>192</td>
+                <td>147</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating2">
+                <td class="level-container">30/30</td>
+                <td>406</td>
+                <td>233</td>
+                <td>178</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating1">
+                <td rowspan="2">2✦</td>
+                <td class="level-container">30/40</td>
+                <td>463</td>
+                <td>265</td>
+                <td>203</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating1">
+                <td class="level-container">40/40</td>
+                <td>534</td>
+                <td>306</td>
+                <td>235</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating2">
+                <td rowspan="2">3✦</td>
+                <td class="level-container">40/50</td>
+                <td>591</td>
+                <td>339</td>
+                <td>260</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating2">
+                <td class="level-container">50/50</td>
+                <td>662</td>
+                <td>380</td>
+                <td>291</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating1">
+                <td rowspan="2">4✦</td>
+                <td class="level-container">50/60</td>
+                <td>719</td>
+                <td>413</td>
+                <td>316</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating1">
+                <td class="level-container">60/60</td>
+                <td>791</td>
+                <td>454</td>
+                <td>347</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating2">
+                <td rowspan="2">5✦</td>
+                <td class="level-container">60/70</td>
+                <td>848</td>
+                <td>486</td>
+                <td>373</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating2">
+                <td class="level-container">70/70</td>
+                <td>919</td>
+                <td>527</td>
+                <td>404</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating1">
+                <td rowspan="2">6✦</td>
+                <td class="level-container">70/80</td>
+                <td>976</td>
+                <td>560</td>
+                <td>429</td>
+                <td>107</td>
+              </tr>
+              <tr class="alternating1">
+                <td class="level-container">80/80</td>
+                <td>1.047</td>
+                <td>601</td>
+                <td>460</td>
+                <td>107</td>
+              </tr>
+            </tbody>
+        </table>
+        <table>
+          <thead>
+            <tr>
+              <th>Nível</th>
+              <th>Custo de Evolução</th>
+              <th>Materiais de Ascensão do Personagem</th>
+              <th>Materiais Necessários</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>0 → 1 ✦</td>
+              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">4,000</td>
               <td></td>
-              <td>10</td>
-          </tr>
-          <tr>
-            <td>2 → 3 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
-              <td>3</td>
-              <td>6</td>
-          </tr>
-          <tr>
-            <td>3 → 4 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
-              <td>7</td>
-              <td>9</td>
-          </tr>
-          <tr>
-            <td>4 → 5 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
-              <td>20</td>
-              <td>6</td>
-          </tr>
-          <tr>
-            <td>5 → 6 ✦</td>
-            <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
-              <td>35</td>
-              <td>9</td>
-          </tr>
-        </tbody>
-      </table>
+              <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">5</td>
+            </tr>
+            <tr>
+              <td>1 → 2 ✦</td>
+              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">8,000</td>
+                <td></td>
+                <td><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Material A">10</td>
+            </tr>
+            <tr>
+              <td>2 → 3 ✦</td>
+              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">16,000</td>
+                <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">3</td>
+                <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">6</td>
+            </tr>
+            <tr>
+              <td>3 → 4 ✦</td>
+              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">40,000</td>
+                <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">7</td>
+                <td><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Material A">9</td>
+            </tr>
+            <tr>
+              <td>4 → 5 ✦</td>
+              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">80,000</td>
+                <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">20</td>
+                <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">6</td>
+            </tr>
+            <tr>
+              <td>5 → 6 ✦</td>
+              <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">160,000</td>
+                <td><img src="/Site_Honkai/Materiais/Item_Void_Cast_Iron.webp" alt="Material A">35</td>
+                <td><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Material A">9</td>
+            </tr>
+          </tbody>
+        </table>
     <h2><span class="mw-headline" id="Eidolons"><font style="vertical-align: inherit;">
       <font style="vertical-align: inherit;">Habilidades de combate</font></font></span></h2> 
     <table>            
@@ -356,12 +355,12 @@
       <tbody>
         <tr>
           <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">240.000</td>
-          <td class="material-cell">6</td>
-          <td class="material-cell">7</td>
-          <td class="material-cell">7</td>
-          <td class="material-cell">3</td>
-          <td class="material-cell">8</td>
-          <td class="material-cell">11</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">8</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">11</td>
         </tr>
       </tbody>
     </table>
@@ -374,47 +373,47 @@
       <tbody>
         <tr>
           <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">652.000</td>
-          <td class="material-cell">9</td>
-          <td class="material-cell">13</td>
-          <td class="material-cell">7</td>
-          <td class="material-cell">3</td>
-          <td class="material-cell">15</td>
-          <td class="material-cell">30</td>
-          <td class="material-cell">3</td>
-          <td class="material-cell">1</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Part.webp" alt="Custo">9</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Spindle.webp" alt="Custo">13</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Ancient_Engine.webp" alt="Custo">7</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Dread.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Desolation.webp" alt="Custo">15</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Obsidian_of_Obsession.webp" alt="Custo">30</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Destroyer_Final_Road (1).webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
         </tr>
       </tbody>
     </table>
 </div>
 <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #b8783c1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;">
-    <div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;">
-      <i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" >Selecione para onde deseja voltar</a></font></font></i>
-        <div class="container">
-            <ul>
-                <li>
-                    <a href="/Site_Honkai/site.html#sobre" style="color: #ad861b;">Sobre</a>
-                </li>
-                <li>
-                    <a href="/Site_Honkai/site.html#obtencao"style="color: #ad861b;">Obtenção</a>
-                </li>
-                <li>
-                    <a href="/Site_Honkai/site.html#progressao"style="color: #ad861b;">Progressão</a>
-                </li>
-                <li>
-                    <a href="/Site_Honkai/site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
-                </li>
-                <li>
-                    <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
-                </li>
-                <li>
-                    <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
-                </li>
-                <li>
-                    <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+  <div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;">
+    <i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" >Selecione para onde deseja voltar</a></font></font></i>
+      <div class="container">
+          <ul>
+              <li>
+                  <a href="/Site_Honkai/site.html#sobre" style="color: #ad861b;">Sobre</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#obtencao"style="color: #ad861b;">Obtenção</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#progressao"style="color: #ad861b;">Progressão</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
+              </li>
+              <li>
+                  <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
+              </li>
+          </ul>
       </div>
+  </div>
+    </div>
 </body>
 </html>
