--- a/Site_Honkai/personagens/dan_shu.html
+++ b/Site_Honkai/personagens/dan_shu.html
@@ -23,6 +23,7 @@
     Dan Shu é um residente imortal do Luofu. Ela é irreversivelmente cega, com o rótulo de "Incompleta", e tem um braço protético. Devido às suas lutas com sua deficiência, ela dedicou parte de sua vida a ser a líder do Sanctus Medicus, procurando encontrar maneiras de curar outros Incompletos como ela. Ela inicialmente parece uma pessoa calma e atenciosa, mas depois mostra um lado de aço e implacável.
     
 </ul>
+<section id="voltar"></section>
         <div class="description">
                                     <ul>
                                         <li>
