--- a/Site_Honkai/personagens/silverwolf.html
+++ b/Site_Honkai/personagens/silverwolf.html
@@ -246,35 +246,36 @@
     </thead>
     <tbody>
       <tr>
-        <td class="dark-background"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Skill_System_Warning.webp" alt="Basic"></td>
         <td>ATK básico</td>
         <td>Aviso do sistema</td>
         <td>Causa 50% do ATK de Silver Wolf como Quantum DMG a um inimigo alvo. com uma chance base de 65% de infligir um bug aleatório por 3 turno(s).</td>
         <td>Ataque Único</td>
-        <td></td>
-        <td></td>
+        <td>Geração: 20</td>
+        <td>30</td>
       </tr>
       <tr>
-        <td class="dark-background"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Skill_Allow_Changes.webp" alt="Skill"></td>
         <td>Skill</td>
         <td>Permitir alterações?</td>
         <td>Causa 70% do ATK do Silver Wolf como Quantum DMG a um inimigo alvo. com uma chance base de 75% de impor a Fraqueza do Tipo de um aliado aleatório no alvo por 3 turno(s) e reduzir o DMG RES do alvo para esse Tipo de Fraqueza em 20%.</td>
         <td>Ataque Único</td>
-        <td></td>
-        <td></td>
+        <td>Geração: 30</td>
+        <td>60</td>
       </tr>
       <tr>
-        <td class="dark-background"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Skill_User_Banned.webp" alt="Ult"></td>
         <td>Ultimate</td>
         <td>Usuário banido</td>
         <td>Causa 180% do ATK do Silver Wolf como Quantum DMG a um inimigo alvo. Há uma chance básica de 100% de causar Emaranhamento. Para cada debuff infligido ao inimigo, causa um adicional de 18% do ATK do Silver Wolf como Quantum DMG ao inimigo, até 5 vezes. Quando Entangled, a ação do inimigo é atrasada em 40% e no início do próximo turno, o inimigo recebe Quantum DoT igual a 48"% do ATK do Silver Wolf.</td>
         <td>Ataque Único</td>
-        <td></td>
-        <td></td>
+        <td>Custo: 110
+          Geração: 5</td>
+        <td>90</td>
         
       </tr>
       <tr>
-        <td class="dark-background"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Skill_Awaiting_System_Response....webp" alt="Talent"></td>
         <td>Talento</td>
         <td>Aguardando resposta do sistema...</td>
         <td>Causa emaranhamento e coloca bug no inimigo</td>
@@ -283,13 +284,13 @@
         <td></td>
       </tr>
       <tr>
-        <td class="dark-background"></td>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Skill_Force_Quit_Program.webp" alt="Talent"></td>
         <td>Técnica</td>
         <td>Forçar Encerramento do Programa</td>
         <td>Imediatamente ataca o inimigo. Após entrar na batalha, ignora os Tipos de Fraqueza e esgota a Resistência de todos os inimigos. Se a Fraqueza de um alvo for Quebrada. Eles se tornarão Emaranhados.</td>
         <td></td>
         <td></td>
-        <td></td>
+        <td>60</td>
       </tr>
     </tbody>
   </table>
@@ -306,37 +307,37 @@
       </thead>
       <tbody>
         <tr>
-          <td class="dark-background"></td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Social_Engineering.webp" alt="Eidolon"></td>
           <td>Engenharia Social</td>
           <td>1</td>
           <td>A duração do bug é estendida por 1 turno(s). Sempre que a Fraqueza de um inimigo é Quebrada. Silver Wolf tem 65% de chance base de infligir um bug aleatório no alvo.</td>
         </tr>
         <tr>
-          <td class="dark-background"></td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Zombie_Network.webp" alt="Eidolon"></td>
           <td>Rede Zumbi</td>
           <td>2</td>
           <td>Quando um inimigo entra em batalha, reduz seu RES de Efeito em 30% por 2 turno(s).</td>
         </tr>
         <tr>
-          <td class="dark-background"></td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Payload.webp" alt="Eidolon"></td>
           <td>Carga Útil</td>
           <td>3</td>
           <td>Nível final +3 até um máximo de Lv. 15. ATK Básico Lv. + 1, até um máximo de Nv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"></td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Bounce_Attack.webp" alt="Eidolon"></td>
           <td>Ataque de Salto</td>
           <td>4</td>
           <td>Ao usar o Ultimate, para cada debuff que o inimigo alvo possui, Silver Wolf regenera 8 de energia, até 5 vez(es).</td>
         </tr>
         <tr>
-          <td class="dark-background"></td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Brute_Force_Attack.webp" alt="Eidolon"></td>
           <td>Ataque de Força Bruta</td>
           <td>5</td>
           <td>Habilidade Lv, +3 até um máximo de Lv. 15. ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
         </tr>
         <tr>
-          <td class="dark-background"></td>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Silver Wolf/Eidolons/Eidolon_Overlay_Network.webp" alt="Eidolon"></td>
           <td>Acesso Concedido</td>
           <td>6</td>
           <td>A duração das Fraquezas implantadas nos inimigos por habilidade não tem limite de turno.</td>
@@ -385,6 +386,7 @@
       </tbody>
     </table>
 </div>
+<section id="voltar">
 <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #b8783c1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;">
   <div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;">
     <i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" >Selecione para onde deseja voltar</a></font></font></i>
@@ -406,7 +408,7 @@
                   <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
               </li>
               <li>
-                  <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
+                  <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">Personagens não jogáveis</a>
               </li>
               <li>
                   <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
@@ -415,5 +417,6 @@
       </div>
   </div>
     </div>
+  </section>
 </body>
 </html>
