--- a/Site_Honkai/site.html
+++ b/Site_Honkai/site.html
@@ -595,7 +595,7 @@
         <button type="submit">Enviar</button>
     </form>
     </section>
-    <section>
+    <section id="social">
         <div>
             <h3>Nos acompanhe</h3>
             <ul class="social-links">
