--- a/Site_Honkai/Itens/Jade_Estelar.html
+++ b/Site_Honkai/Itens/Jade_Estelar.html
@@ -26,8 +26,37 @@
     <h2>Fonte 8:<p>Check-in diário do HoYoLAB</p></h2>
     <h2>Fonte 9:<p>Atividade diária de treinamento</p></h2> 
   </div>
-  <div class="description">
-    <i><a href="/Site_Honkai/site.html">Voltar</a></i>
-  </div>
+<section id="description">
+  <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #b8783c1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;">
+    <div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;">
+      <i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" >Selecione para onde deseja voltar</a></font></font></i>
+        <div class="container">
+            <ul>
+                <li>
+                    <a href="/Site_Honkai/site.html#sobre" style="color: #ad861b;">Sobre</a>
+                </li>
+                <li>
+                    <a href="/Site_Honkai/site.html#obtencao"style="color: #ad861b;">Obtenção</a>
+                </li>
+                <li>
+                    <a href="/Site_Honkai/site.html#progressao"style="color: #ad861b;">Progressão</a>
+                </li>
+                <li>
+                    <a href="/Site_Honkai/site.html#personagens"style="color: #ad861b;">Personagens jogáveis</a>
+                </li>
+                <li>
+                    <a href="/Site_Honkai/site.html#lancados"style="color: #ad861b;">Personagens que serão lançados</a>
+                </li>
+                <li>
+                    <a href="/Site_Honkai/site.html#npc"style="color: #ad861b;">personagens não jogáveis</a>
+                </li>
+                <li>
+                    <a href="/Site_Honkai/site.html#contato"style="color: #ad861b;">Contato</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+      </div>
+    </section>
 </body>
 </html>
