--- a/Site_Honkai/personagens/yukong.html
+++ b/Site_Honkai/personagens/yukong.html
@@ -64,12 +64,10 @@
     <table class="character-table">
         <h2><span class="mw-headline" id="Combat_Skills"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ainda não se tem dados sobre este(a) personagem.</font></font></span></h2>
     </table>
+    <section id="voltar"></section>
 <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #b8783c1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;">
   <div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;">
-    <i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" ><a href="/Site_Honkai/site.html" style="color: black;">Voltar para o início</a></font></font></i>
-  </div>
-</div>
-</div>
+    <i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" >Selecione para onde deseja voltar</a></font></font></i>
 <div class="container">
   <ul>
       <li>
